init verify OTP handler
